Work in progress
Add sonar downloading and unpacking into playbook
Start work on configuring sonar.properties

--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -4,6 +4,7 @@
   vars:
     - sonar_db_name: sonar
     - sonar_db_user: sonarqube
+    - sonar_db_password: topsecret
 
   roles:
     - role: 'ANXS.postgresql'
