--- a/ansible/roles/sonar/tasks/dependencies.yaml
+++ b/ansible/roles/sonar/tasks/dependencies.yaml
@@ -10,3 +10,9 @@
     name: openjdk-8-jdk
     update_cache: yes
     state: present
+
+- name: Install unzip
+  become: yes
+  apt:
+    name: unzip
+    state: present
