--- a/ansible/roles/ANXS.postgresql/defaults/main.yml
+++ b/ansible/roles/ANXS.postgresql/defaults/main.yml
@@ -46,6 +46,7 @@ postgresql_database_extensions: []
 # List of users to be created (optional)
 postgresql_users:
   - name: '{{ sonar_db_user }}'
+    pass: '{{ sonar_db_password }}'
 
 # List of user privileges to be applied (optional)
 postgresql_user_privileges:
