--- a/ansible/roles/sonar/defaults/main.yaml
+++ b/ansible/roles/sonar/defaults/main.yaml
@@ -4,3 +4,7 @@ sonar_vm_map_count: 262144
 sonar_fs_file_max: 65536
 sonar_nofile_limit: 65536
 sonar_nproc_limit: 2048
+sonar_system_dir: /opt/sonarqube
+sonar_version: 6.7.1
+sonar_check_sum_algorithm: md5
+sonar_check_sum_hash: 4211e13675f659e54281c551a1367eb8
